# luafan

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.alpine  Dockerfile.base  Dockerfile.local  Dockerfile.ubuntu  LICENSE.txt  README.md  REFACTORING_PLAN.md  build-openwrt.sh  build.sh  build_docker_alpine.sh  build_docker_ubuntu.sh  circle.yml  luafan-0.1-1.rockspec  luafan-0.1-2.rockspec  luafan-0.1-3.rockspec  luafan-0.3-2.rockspec  luafan-0.4-1.rockspec  luafan-0.5-1.rockspec  luafan-0.6-1.rockspec  luafan-0.7-2.rockspec  luafan-0.7-3.rockspec  luafan-0.8-0.rockspec  luafan.rockspec  luafanlite-0.1-3.rockspec  luafanlite-0.3-2.rockspec  luafanlite-0.4-1.rockspec  luafanlite-0.5-1.rockspec  luafanlite-0.6-1.rockspec  luafanlite-0.7-2.rockspec  luafanlite-0.7-3.rockspec  luafanlite-0.8-0.rockspec  luafanlite.rockspec  luafanmicro-0.1-3.rockspec  luafanmicro-0.3-2.rockspec  luafanmicro-0.4-1.rockspec  (+5 more)
.circle/: config.yml
.circleci/: config.yml
.github/workflows/: ci.yml  docker-push.yml
.travis/: setup_lua.sh
docs/: CNAME  README.md  fan-popen.md  guide.md  sample.md  setup.md
docs/api/: config.md  connector.md  evdns.md  fan.md  fifo.md  http.md  httpd.md  mariadb.md  mariadb_orm.md  mariadb_pool.md  objectbuf.md  pool.md  sqlite3_orm.md  stream.md  tcpd.md  udpd.md  upnp.md  utils.md  worker.md
docs/samples/: fifo.md
examples/: httpd_advanced_example.lua  popen_basic.lua  popen_mcp_client.lua  udp_dest_getip_example.lua
ios/: Podfile  luafan.podspec  push.sh
ios/luafan/: luafan.h  luafan.m
ios/luafan.xcodeproj/: project.pbxproj
ios/luafan.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/luafan.xcworkspace/: contents.xcworkspacedata
libevent2/: Makefile
lua-cjson/: Makefile
lua-cjson/openwrt/: Makefile
lua-compat53/: Makefile
lua-compat53/openwrt/: Makefile
lua-compat53/patches/: 010.patch
lua-lmd5/: Makefile
lua-lmd5/openwrt/: Makefile
lua-openssl/: Makefile
lua-openssl/openwrt/: Makefile
lua-openssl/patches/: 010.patch
luafan/: Makefile
luafan-openssl/: Makefile
luafan-openssl/patches/: 010.patch
modules/: config.lua
modules/config/: mariadb.lua  service.lua  worker.lua
modules/fan/: http.lua  objectbuf.lua  orm_base.lua  pool.lua  reliable_udp.lua  stream.lua  upnp.lua  utils.lua
modules/fan/connector/: fifo.lua  init.lua  popen.lua  tcp.lua  udp.lua
modules/fan/http/: http.lua  init.lua
modules/fan/httpd/: httpd.lua  init.lua
modules/fan/log/: init.lua
modules/fan/objectbuf/: init.lua
modules/fan/stream/: bit.lua  ffi.lua  init.lua
modules/fan/worker/: init.lua
modules/mariadb/: orm.lua  pool.lua
modules/sqlite3/: orm.lua
openwrt/: Makefile
openwrt/luafan/: Makefile
openwrt/luafan-openssl/: Makefile
openwrt/luafanlite/: Makefile
openwrt/luafanmicro/: Makefile
src/: .gitignore  bytearray.c  bytearray.h  conn_config.h  evdns.c  evdns.h  event_mgr.c  event_mgr.h  fifo.c  hostcheck.c  http.c  httpd.c  httpd_internal.h  httpd_metrics.c  httpd_request.c  httpd_websocket.c  json.c  luafan.c  luafan_posix.c  luamariadb.c  luasql.c  luasql.h  objectbuf.c  openssl_hostname_validation.h  platform.h  popen.c  stream.c  stream_ffi.c  tcpd.c  tcpd_common.h  tcpd_config.c  tcpd_error.c  tcpd_event.c  tcpd_server.c  tcpd_server.h  tcpd_ssl.c  tcpd_ssl.h  thread_tracker.c  udpd.c  udpd_common.h  (+7 more)
src/mariadb/: luamariadb_autocommit.c  luamariadb_autocommit.h  luamariadb_close.c  luamariadb_close.h  luamariadb_commit.c  luamariadb_commit.h  luamariadb_common.h  luamariadb_connect.c  luamariadb_connect.h  luamariadb_cursor.c  luamariadb_cursor.h  luamariadb_ping.c  luamariadb_ping.h  luamariadb_prepare.c  luamariadb_prepare.h  luamariadb_query.c  luamariadb_query.h  luamariadb_rollback.c  luamariadb_rollback.h  luamariadb_setcharset.c  luamariadb_setcharset.h  luamariadb_stmt.c  luamariadb_stmt.h  luamariadb_stmt_close.c  luamariadb_stmt_close.h  luamariadb_stmt_execute.c  luamariadb_stmt_execute.h  luamariadb_stmt_fetch.c  luamariadb_stmt_fetch.h  luamariadb_stmt_sendlongdata.c  luamariadb_stmt_sendlongdata.h  luamariadb_stmt_storeresult.c  luamariadb_stmt_storeresult.h
tests/: README.md  docker-compose.yml  docker-setup.sh  performance_regression_check.sh  run_all_lua_tests.sh  run_all_tests.sh  run_httpd_tests.lua  run_lua_tests.sh  run_performance_tests.sh  verify_framework.sh
tests/c/framework/: test_framework.c  test_framework.h
tests/c/unit/: test_bytearray.c  test_bytearray_performance.c  test_event_mgr.c  test_fifo.c  test_http.c  test_httpd.c  test_luafan.c  test_luafan_posix.c  test_luamariadb.c  test_main.c  test_objectbuf.c  test_udpd.c  test_udpd_config.c  test_udpd_dest.c  test_udpd_dns.c  test_udpd_event.c  test_udpd_utils.c  test_utlua.c
tests/lua/: mariadb_test_config.lua  run_all_lua_tests.lua  test_chunked_disconnect.lua  test_chunked_disconnect_lua.lua  test_evdns_cleanup_order.lua  test_evdns_integration.lua  test_event_mgr_loop_cleanup.lua  test_example.lua  test_fan_connector.lua  test_fan_core.lua  test_fan_evdns.lua  test_fan_http.lua  test_fan_http_enhanced.lua  test_fan_httpd.lua  test_fan_httpd_core.lua  test_fan_httpd_loop.lua  test_fan_httpd_lua.lua  test_fan_objectbuf.lua  test_fan_pool.lua  test_fan_stream.lua  test_fan_upnp.lua  test_fan_utils.lua  test_fan_worker.lua  test_fifo_lifecycle.lua  test_http_client.lua  test_http_client_timer_linger.lua  test_httpd_compliance.lua  test_httpd_comprehensive.lua  test_httpd_performance.lua  test_httpd_security.lua  test_httpd_websocket_lifecycle.lua  test_httpd_websocket_req_access.lua  test_integration_http_server.lua  test_luafan_mainevent_lifetime.lua  test_mariadb_basic.lua  test_mariadb_comprehensive.lua  test_mariadb_orm.lua  test_mariadb_pending_event.lua  test_mariadb_phase1.lua  test_mariadb_phase1_prepared.lua  (+29 more)
tests/lua/framework/: test_framework.lua
tests/lua/modules/: test_fan_utils.lua
tests/mariadb-init/: 01-init-database.sql
